--- a/style.css
+++ b/style.css
@@ -1,3 +1,3 @@
 @charset "UTF-8";
   
-div {border:4px solid lime; width: 85%; height: 450px; background-color: rgba(200, 0, 50, 0.3); }
+div {border:4px solid lime; width: 90%; background-color: rgba(200, 0, 50, 0.3); }
